cabal-version:      2.4
name:               random-language-chooser
version:            0.1.0.0

author:             Ciaran KG
maintainer:         55831661+Eldred777@users.noreply.github.com

extra-source-files:
    README.md

executable random-language-chooser
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, QuickCheck
    hs-source-dirs:   app
    default-language: Haskell2010
